Begin transferring resume over

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nickstew.github.io",
+  "name": "chriswcs.github.io",
   "version": "1.0.0",
   "license": "MIT",
   "description": "Personal website for Christian Hansen",
